--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "validator": "^13.1.1"
   },
