--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,8 @@
-image: node latest
+image: node:latest
+
+cache:
+  paths:
+    - node_modules/
 
 stages:
   - build
@@ -13,3 +17,5 @@ build:
     - yarn -v
     - yarn install
     - yarn run build
+  path: 
+    - ./dist
