--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ before_script:
 build:
   stage: build
   before_script:
+    - yarn global add node-gyp
     - yarn config set cache-folder .yarn
   script:
     - echo "building from src"
