--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
 
 before_script:
     - apt-get update -qq && apt-get install
+    - export PATH=$HOME/.yarn/bin:$PATH
     - echo "packages instaled successfully."
 
 build:
