--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ before_script:
 build:
   stage: build
   before_script:
+    - export PATH=$HOME/.yarn/bin:$PATH
     - yarn global add node-gyp
     - yarn config set cache-folder .yarn
   script:
