--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,14 @@ stages:
 
 before_script:
     - apt-get update -qq && apt-get install -qy libelf1
-    - echo "packages instaled successfully."
 
 build:
   stage: build
   before_script:
+    - export PATH=$HOME/.yarn/bin:$PATH
+    - yarn -v
     - yarn config set cache-folder .yarn
     - yarn install
-    - export PATH=$HOME/.yarn/bin:$PATH
   script:
     - echo "building from src"
     - yarn -v
