--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker-build": "docker image build -t gitlab-project .",
+    "docker-run": "docker run -p 3000:80 gitlab-project",
+    "docker-compose": "docker-compose up --build -f $DOCKER_COMPOSE_FILE"
   },
   "eslintConfig": {
     "extends": "react-app"
