--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-focus-lock": "^2.4.1",
     "react-google-login": "^5.1.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -55,6 +56,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.1",
     "@types/validator": "^13.1.0"
   }
 }
