--- a/package.json
+++ b/package.json
@@ -3,7 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/code": "^2.5.0",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/editorjs": "^2.18.0",
+    "@editorjs/embed": "^2.3.1",
+    "@editorjs/header": "^2.5.0",
+    "@editorjs/image": "^2.4.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.2.1",
+    "@editorjs/list": "^1.5.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.7.0",
+    "@editorjs/quote": "^2.3.0",
+    "@editorjs/raw": "^2.1.2",
+    "@editorjs/simple-image": "^1.3.3",
+    "@editorjs/table": "^1.2.2",
+    "@editorjs/warning": "^1.1.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "@natterstefan/react-editor-js": "^0.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,6 +30,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
+    "draft-js": "^0.11.6",
+    "draft-js-anchor-plugin": "^2.0.3",
+    "editor-js": "^0.1.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -52,11 +73,13 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.43",
     "@types/jquery": "^3.5.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.1",
-    "@types/validator": "^13.1.0"
+    "@types/validator": "^13.1.0",
+    "typescript-styled-plugin": "^0.15.0"
   }
 }
