--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "axios": "^0.19.2",
     "draft-js": "^0.11.6",
     "draft-js-anchor-plugin": "^2.0.3",
+    "draftjs-to-html": "^0.9.1",
     "editor-js": "^0.1.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
     "react-focus-lock": "^2.4.1",
     "react-google-login": "^5.1.21",
@@ -74,6 +76,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.43",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/jquery": "^3.5.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
